Redirect output to log and hide reflection warning